2007-07-25  Guillem Jover  <guillem@debian.org>

	* scripts/changelog/debian.pl: Switch from 'dpkg-gettext.pl' to
	Dpkg::Gettext.

2007-07-22  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gettext.pl: Move ...
	* scripts/Dpkg/Gettext.pm: ... here. Add a package statement.
	Fix all users.
	* scripts/Makefile.am (dist_pkglib_SCRIPTS): Remove 'dpkg-gettext.pl'.
	(nobase_dist_perllib_DATA): Add 'Dpkg/Gettext.pm'.

	* scripts/822-date.pl: Do not push $dpkglibdir into @INC anymore.
	* scripts/cleanup-info.pl: Likewise.
	* scripts/controllib.pl: Likewise.
	* scripts/dpkg-divert.pl: Likewise.
	* scripts/dpkg-scansources.pl: Likewise.
	* scripts/dpkg-statoverride.pl: Likewise.
	* scripts/install-info.pl: Likewise.
	* scripts/update-alternatives.pl: Likewise.

2007-07-22  Guillem Jover  <guillem@debian.org>

	* scripts/cleanup-info.pl: Use new Dpkg module, and remove variable
	declarations already present in the module.
	* scripts/controllib.pl: Likewise.
	* scripts/dpkg-architecture.pl: Likewise.
	* scripts/dpkg-checkbuilddeps.pl: Likewise.
	* scripts/dpkg-distaddfile.pl: Likewise.
	* scripts/dpkg-divert.pl: Likewise.
	* scripts/dpkg-genchanges.pl: Likewise.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-parsechangelog.pl: Likewise.
	* scripts/dpkg-scanpackages.pl: Likewise.
	* scripts/dpkg-scansources.pl: Likewise.
	* scripts/dpkg-shlibdeps.pl: Likewise.
	* scripts/dpkg-source.pl: Likewise.
	* scripts/dpkg-statoverride.pl: Likewise.
	* scripts/install-info.pl: Likewise.
	* scripts/update-alternatives.pl: Likewise.
	* scripts/822-date.pl: Likewise.
	* changelog/debian.pl: Likewise.

	* scripts/controllib.pl (init_substvars): Remove comment about
	$version needing to be a global variable set elsewhere.

	* scripts/dpkg-scanpackages.pl: Remove $0 mangling.
	(version, usage): Use $progname instead of $0.
	* scripts/dpkg-statoverride.pl: Likewise.
	* scripts/install-info.pl: Likewise.
	* scripts/dpkg-divert.pl: Likewise.