@@ -1,3 +1,8 @@
+2007-07-31  Ian Jackson  <iwj@ubuntu.com>
+
+	* src/archives.c (quote_filename): Change formatting to match the
+	rest of the file (tab -> 2 spaces).
+
 2007-07-25  Guillem Jover  <guillem@debian.org>
 
 	* scripts/changelog/debian.pl: Switch from 'dpkg-gettext.pl' to
